# tinypico-cycling-tracker

./: .gitignore  .gitmodules  IMPLEMENTATION.md  README.md
Schematics/TinyPico-Cycling-Tracker/: Bottom_board.kicad_sch  TinyPico-Cycling-Tracker.kicad_pcb  TinyPico-Cycling-Tracker.kicad_pro  TinyPico-Cycling-Tracker.kicad_sch  Upper_board.kicad_sch  fp-lib-table  sym-lib-table
Schematics/kicad-libraries/SPST Button/: SPST Button.step
Schematics/kicad-libraries/SPST Button/SPST_Button.pretty/: SPST_Button.kicad_mod
code/: README.md  test_sensor_fusion.sh
code/arduino-tct/: arduino-tct.ino  constants.hpp  data_types.hpp  graphics.hpp  konfig.h  matrix.cpp  matrix.h  oled.cpp  oled.hpp  ukf.cpp  ukf.h  ukf_gps_imu.cpp  ukf_gps_imu.hpp  utils.hpp  workout.cpp  workout.hpp  writer.cpp  writer.hpp  writter.cpp  writter.hpp
code/data_logger/: constants.hpp  data_logger.ino  data_types.hpp  konfig.h  writer.cpp  writer.hpp  writter.cpp  writter.hpp
code/test_ukf/: .gitignore  CMakeLists.txt  CMakePresets.json
code/test_ukf/src/: constants.hpp  data_types.hpp  konfig.h  main.cpp  matrix.cpp  matrix.h  ukf.cpp  ukf.h  ukf_gps_imu.cpp  ukf_gps_imu.hpp  utils.hpp
code/test_ukf_py/: README.md  constants.py  data_types.py  requirements.txt  sensor_fusion.py  ukf_gps_imu.py  utils.py
code/utils/: csv_to_gpx.py  requirements.txt  validate_gpx_performance.py
